# pc-performance-test

./: .copier-answers.main.yaml  .gitignore  .pre-commit-config.yaml  .ruff.base.toml  .ruff.toml  README.md  main.py  pyproject.toml
.github/workflows/: ci-main.yaml  ci-pr.yaml  run-performance-test.yaml  update-template.yaml
